--------------------------------------------------------------------------------
drkns 2026-02-04 20:37:59+00:00 - build 6642

1. gh-1070: Build 6613 considers profile directory read-only under certain conditions.

--------------------------------------------------------------------------------
drkns 2026-02-03 00:20:49+00:00 - build 6641

1. Refactoring & minor fixes.

--------------------------------------------------------------------------------
birdie-github 2026-01-31 16:27:32+00:00 - build 6640

1. gh-1059: Preserve timestamps for existing destination directories.

--------------------------------------------------------------------------------
drkns 2026-01-30 20:00:26+00:00 - build 6639

1. Continue 6638.

--------------------------------------------------------------------------------
drkns 2026-01-28 22:43:59+00:00 - build 6638

1. Fix locked filter display in captionless menus.

--------------------------------------------------------------------------------
drkns 2026-01-21 21:55:16+00:00 - build 6637

1. gh-1066: Remove messing with cursor state from VMenu2.

2. Reduce highlight menu flickering.

--------------------------------------------------------------------------------
drkns 2026-01-21 00:46:34+00:00 - build 6636

1. gh-1065: Continue fullwidth-aware rendering.

--------------------------------------------------------------------------------
zg 2026-01-18 20:23:30+02:00 - build 6635

1. correction of 6608.2.

--------------------------------------------------------------------------------
drkns 2026-01-17 23:27:18+00:00 - build 6634

1. Correction of 6633.3.

--------------------------------------------------------------------------------
drkns 2026-01-17 23:11:32+00:00 - build 6633

1. Correction of 6626.2.

2. Remove redundant menu redraws on CtrlUp/Down.

3. Optimize block Undo in Editor.

4. Refactoring.
   Make checking struct sizes easier.

--------------------------------------------------------------------------------