@@ -3728,6 +3728,8 @@ ne pro pluginy).
 
  #Ctrl+H# shows unmapped volumes.
 
+ #Shift+F6# allows to change the volume label.
+
  #Ctrl+R# allows to refresh the disk selection menu.
 
  If "#CD drive type#" mode is enabled (#Ctrl+8#), Far will attempt to
