@@ -97,6 +97,7 @@ enum ELEVATION_COMMAND: int
 	C_FUNCTION_GETFILESECURITY,
 	C_FUNCTION_SETFILESECURITY,
 	C_FUNCTION_RESETFILESECURITY,
+	C_FUNCTION_SETVOLUMELABEL,
 
 	C_COMMANDS_COUNT
 };
@@ -998,6 +999,21 @@ bool elevation::reset_file_security(string const& Object)
 		});
 }
 
+bool elevation::set_volume_label(string const& Object, string const& Label)
+{
+	return execute(lng::MElevationRequiredSetVolumeLabel, Object,
+		false,
+		[&]
+		{
+			return os::fs::low::set_volume_label(Object.c_str(), Label.c_str());
+		},
+		[&]
+		{
+			Write(C_FUNCTION_SETVOLUMELABEL, Object, Label);
+			return RetrieveLastErrorAndResult<bool>();
+		});
+}
+
 elevation::suppress::suppress(bool const Completely):
 	m_owner(Global? &instance() : nullptr),
 	m_Completely(Completely)
@@ -1342,6 +1358,16 @@ private:
 		Write(os::last_error(), Result);
 	}
 
+	void SetVolumeLabelHandler() const
+	{
+		const auto Object = Read<string>();
+		const auto Label = Read<string>();
+
+		const auto Result = os::fs::low::set_volume_label(Object.c_str(), Label.c_str());
+
+		Write(os::last_error(), Result);
+	}
+
 	static DWORD CALLBACK CopyProgressRoutineWrapper(LARGE_INTEGER TotalFileSize, LARGE_INTEGER TotalBytesTransferred, LARGE_INTEGER StreamSize, LARGE_INTEGER StreamBytesTransferred, DWORD StreamNumber, DWORD CallbackReason, HANDLE SourceFile,HANDLE DestinationFile, LPVOID Data)
 	{
 		const auto Param = static_cast<callback_param*>(Data);
@@ -1403,6 +1429,7 @@ private:
 			&elevated::GetFileSecurityHandler,
 			&elevated::SetFileSecurityHandler,
 			&elevated::ResetFileSecurityHandler,
+			&elevated::SetVolumeLabelHandler,
 		};
 
 		static_assert(Handlers.size() == C_COMMANDS_COUNT);
